Initial commit being a git ignore URL: https://singds.atlassian.net/browse/ESFR-5996 Ticket: ESFR-5996

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ pipeline_cache/*
 Backup of previous working version/*
 *.pkl
 .ipynb_checkpoints/*
+.databricks/
 sqljdbc_12.10/*
 venv/*
+.vscode/
+models/
